--- a/src/app/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
+++ b/src/app/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
@@ -14,7 +14,7 @@
   ></a>
 </div>
 
-<div class="menu-item">
+<!--<div class="menu-item">
   <a
     class="menu-link without-sub"
     routerLink="/dashboard-project"
@@ -27,7 +27,7 @@
     </span>
     <span class="menu-title">Dashboard2</span
   ></a>
-</div>
+</div>-->
 
 <div class="menu-item">
   <a
@@ -53,11 +53,11 @@
         [inlineSVG]="'./assets/media/icons/duotune/general/gen019.svg'"
         class="svg-icon svg-icon-2"
       ></span> </span
-    ><span class="menu-title">Tablero</span></a
+    ><span class="menu-title">Notas</span></a
   >
 </div>
 
-<div class="menu-item">
+<!--<div class="menu-item">
   <a
     class="menu-link without-sub"
     routerLink="/crafted/pages/wizards/config-cta"
@@ -67,9 +67,9 @@
         [inlineSVG]="'./assets/media/icons/duotune/general/gen019.svg'"
         class="svg-icon svg-icon-2"
       ></span> </span
-    ><span class="menu-title">Cuenta</span></a
+    ><span class="menu-title">Cambiar Cuenta</span></a
   >
-</div>
+</div>-->
 <div class="menu-item">
   <a
     class="menu-link without-sub"
