--- a/src/app/_metronic/partials/layout/extras/dropdown-inner/user-inner/user-inner.component.html
+++ b/src/app/_metronic/partials/layout/extras/dropdown-inner/user-inner/user-inner.component.html
@@ -20,14 +20,21 @@
     </div>
   </div>
 
-  <!--<div class="separator my-2"></div>
+  <div class="separator my-2"></div>
 
+  <div class="menu-item px-5">
+    <a routerLink="/crafted/pages/wizards/config-cta" class="menu-link px-5">
+      Cambiar Cuenta
+    </a>
+  </div>
+
+  <!--
   <div class="menu-item px-5">
     <a routerLink="/crafted/pages/profile" class="menu-link px-5">
       My Profile
     </a>
   </div>
-
+  
   <div class="menu-item px-5">
     <a class="menu-link px-5 cursor-pointer" placement="top-start" ngbTooltip="Coming soon">
       <span class="menu-text">My Projects</span>
