--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -29,7 +29,7 @@
       <!--begin::Card body-->
       <div class="card-body p-9">
         <!--begin::Heading-->
-        <div class="fs-2hx fw-bold">1</div>
+        <div class="fs-2hx fw-bold">{{num_proyectos}}</div>
         <div class="fs-4 fw-semibold text-gray-400 mb-7">Proyectos</div>
         <!--end::Heading-->
         <!--begin::Wrapper-->
@@ -124,7 +124,7 @@
     <div class="card h-100">
       <div class="card-body p-9">
         <!--begin::Heading-->
-        <div class="fs-2hx fw-bold">49</div>
+        <div class="fs-2hx fw-bold">{{num_equipos}}</div>
         <div class="fs-4 fw-semibold text-gray-400 mb-7">Miembros del equipo</div>
         <!--end::Heading-->
         <!--begin::Users group-->
@@ -195,9 +195,10 @@
 
 <div class="row g-6 g-xl-9">
   <!--begin::Col-->
-  <div class="col-md-6 col-xl-4">
+  <ng-container *ngFor="let proyecto of proyectos; let i = index;">
+  <div class="col-md-6 col-xl-4" >
     <!--begin::Card-->
-    <a href="../../demo1/dist/apps/projects/project.html" class="card border-hover-primary">
+    <a routerLink="/dashboard-project/{{proyecto.id}}" class="card border-hover-primary">
       <!--begin::Card header-->
       <div class="card-header border-0 pt-9">
         <!--begin::Card Title-->
@@ -219,7 +220,7 @@
       <!--begin:: Card body-->
       <div class="card-body p-9">
         <!--begin::Name-->
-        <div class="fs-3 fw-bold text-dark">Fitnes App</div>
+        <div class="fs-3 fw-bold text-dark">{{proyecto.nombre}}</div>
         <!--end::Name-->
         <!--begin::Description-->
         <p class="text-gray-400 fw-semibold fs-5 mt-1 mb-7">CRM App application to HR efficiency</p>
@@ -269,6 +270,7 @@
     </a>
     <!--end::Card-->
   </div>
+  </ng-container>
   <!--end::Col-->
 
 </div>
