--- a/src/app/_metronic/layout/components/header/header.component.html
+++ b/src/app/_metronic/layout/components/header/header.component.html
@@ -80,11 +80,11 @@
 
     <ng-container *ngIf="headerLeft === 'page-title'">
       <div class="d-flex align-items-center" id="kt_header_nav">
-        <app-page-title
+        <!--<app-page-title
           #ktPageTitle
           class="page-title d-flex"
           [ngClass]="pageTitleCssClasses"
-        ></app-page-title>
+        ></app-page-title>-->
       </div>
     </ng-container>
 
