--- a/src/app/pages/boards-voto/boards-voto.component.html
+++ b/src/app/pages/boards-voto/boards-voto.component.html
@@ -116,45 +116,30 @@
     <div class="flex flex-auto p-6 sm:p-10">
 
             <div cdkDropListGroup>
-              <div class="notes-container">
-                <h2 style="color: #fff;">Como Podriamos</h2>
-            
-                <div
-                  cdkDropList
-                  [cdkDropListData]="notas"
-                  class="notes-list"
-                  (cdkDropListDropped)="drop($event)">
-                  <div class="notes-box" *ngFor="let no of notas; let z = index;" cdkDrag>{{no.content}}
-                  </div>
-                </div>
-              </div>
-              <div style="width: 100%; height: 600px;overflow: auto;margin-bottom: 100px;background-color: #fff; position: relative;padding: 20px;">
-                
-                <div class="toolbar" id="toolbar" tabindex="0" style="position:static !important">
-                  <!--<input name="category" #category type="text"/>-->
-                  <a class="add material-icons" (click)="addCategory()" >
-                    Agregar Categoria
-                    <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-plus" style="margin-top: -40px;margin-left: 120px;" viewBox="0 0 16 16">
-                      <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-                    </svg>
-                  </a>
-                </div>
                 <ng-container *ngFor="let t of filteredTablero | async; let i = index;">
                 <div class="example-container">
-                    <h2 style="color: #000;">{{t.title}}</h2>
+                    <h2 style="color: #fff;">{{t.title}}</h2>
                 
                     <div
                       cdkDropList
                       [cdkDropListData]="t.data"
                       class="example-list"
                       (cdkDropListDropped)="drop($event)">
-                      <div class="example-box" *ngFor="let item of t.data; let j = index;" cdkDrag>{{item.content}}
+                      <div class="example-box" *ngFor="let item of t.data; let j = index;" cdkDrag>{{item.label}}
+                        <label class="votos">{{item.voto}}</label>
+                        <mat-icon
+                                                class="voto-maximo"
+                                                [matTooltip]="'Voto máximo'" *ngIf="verifyVotoMaximo(i, j)">check_circle</mat-icon>
+                        <button class="quitar" (click)="quitar(i, j)" *ngIf="verifyVoto(i, j)">Quitar</button>
+                        <button class="votar" (click)="votar(i, j)" *ngIf="!verifyVoto(i, j) && !verifyVotoTablero(i)">Votar</button>
+                        
+                        <button class="votar-maximo" (click)="votarMaximo(i, j)" *ngIf="!verifyVotoMaximo(i, j) && !verifyVotoTablero(i)">Voto +</button>
+                        <button class="quitar-maximo" (click)="quitarMaximo(i, j)" *ngIf="verifyVotoMaximo(i, j)">Quitar</button>
                       </div>
                     </div>
                   </div>
                 </ng-container>
               </div>
-            </div>
 </div>
 
 </div>
