--- a/src/app/pages/boards-voto/boards-voto.component.scss
+++ b/src/app/pages/boards-voto/boards-voto.component.scss
@@ -2,7 +2,7 @@
   .notes-container{
     width: 100%;
     max-width: 100%;
-    height: 230px;
+    height: 300px;
     margin: 0 25px 25px 0;
     display: grid;/*
     vertical-align: top;*/
@@ -10,16 +10,16 @@
 
   .notes-list{
     border: solid 1px #ccc;
-    min-height: 170px;
+    min-height: 60px;
     background: rgb(204, 202, 202);
     border-radius: 4px;
     overflow: auto;
     display: flex;
-    padding: 10px;
+    padding: 50px;
   }
 
   .notes-box {
-    padding: 0px 10px;
+    padding: 20px 10px;
     border-bottom: solid 1px #ccc;
     color: rgba(0, 0, 0, 0.87);
     display: flex;
@@ -30,6 +30,7 @@
     cursor: move;
     background: rgb(255, 201, 4);
     font-size: 14px;
+    
     width:150px;
     min-width:150px;
     height: 150px;
@@ -38,11 +39,11 @@
     box-shadow: 0px 10px 24px 0px rgba(0,0,0,0.75);
     /*margin: auto;*/
     margin-left: 20px;
-    margin-bottom: 0px;
+    margin-bottom: 20px;
   }
 
   .example-container {
-    width: 300px;
+    width: 400px;
     max-width: 100%;
     margin: 0 25px 25px 0;
     display: inline-block;
@@ -56,7 +57,7 @@
     border-radius: 4px;
     overflow: hidden;
     display: block;
-    padding: 10px;
+    padding: 50px;
   }
   
   .example-box {
@@ -71,6 +72,7 @@
     cursor: move;
     background: rgb(255, 201, 4);
     font-size: 14px;
+    
     width:150px;
     height: 150px;
     cursor: pointer;
@@ -257,8 +259,8 @@
     background-color: gold;
     border: 10px solid gray;
     border-bottom: 0;*/
-    color: gray;/*
-    font-size: -webkit-xxx-large;*/
+    color: gray;
+    font-size: -webkit-xxx-large;
     font-weight: bold;
   }
   
@@ -268,13 +270,11 @@
     color: #fff;
     /* width: 39px; */
     cursor: pointer;
-    background: #2592f1;
-    width: 160px;
+    background: #7f6c04;
+    width: 40px;
     height: 40px;
     border: 1px solid #fff;
     border-radius: 67px;
-    padding-left: 5px;
-    padding-top: 10px;
   }
   .dark-modal {
     background-color: #292b2c !important;
