--- a/src/app/_metronic/layout2/layout.component.html
+++ b/src/app/_metronic/layout2/layout.component.html
@@ -35,7 +35,7 @@
               <div class="symbol-group symbol-hover mb-3">
                 <ng-container *ngFor="let usu2 of usuarios_active; let i2 = index;">
                 <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="{{usu2.nombre}}">
-                    <span class="symbol-label bg-primary text-inverse-primary fw-bold">{{usu2.nombre.substring(0, 1).toUpperCase()}}</span>
+                    <span [ngClass]="usu2.active ? 'symbol-label bg-primary text-inverse-primary fw-bold' : 'symbol-label bg-gray text-inverse-gray fw-bold'">{{usu2.nombre.substring(0, 1).toUpperCase()}}</span>
                 </div>
                 </ng-container>
               </div>
