--- a/src/app/pages/boards-voto2/boards-voto2.component.html
+++ b/src/app/pages/boards-voto2/boards-voto2.component.html
@@ -130,18 +130,15 @@
                 <div class="clasificacion-list" cdkDropList [cdkDropListData]="t.data" (cdkDropListDropped)="drop($event)">
                   <div class="clasificacion-box" *ngFor="let item of t.data; let j = index;" cdkDrag>{{item.label}}
                     <label class="votos">{{item.voto}}</label>
-                    <!--<div class="voto-maximo bg-success position-absolute h-8px w-8px rounded-circle" *ngIf="verifyVotoMaximo(i, j)">
-                    </div>-->
+                    <div class="voto-maximo bg-success position-absolute h-8px w-8px rounded-circle" *ngIf="verifyVotoMaximo(i, j)">
+                    </div>
                     <!--<mat-icon
                     class="voto-maximo"
                     [matTooltip]="'Voto máximo'" *ngIf="verifyVotoMaximo(i, j)">check_circle</mat-icon>-->
-                    <button class="quitar-maximo" (click)="quitar(i, j)" *ngIf="verifyVoto(i, j)">Quitar</button>
-                    <button class="votar" (click)="votar(i, j)" *ngIf="num_votos < maximo_votos">Votar</button>
-                    <!--
-                      *ngIf="verifyVoto(i, j)"
-                      *ngIf="!verifyVoto(i, j) && !verifyVotoTablero(i)"
+                    <button class="quitar" (click)="quitar(i, j)" *ngIf="verifyVoto(i, j) && rol != 'Decisor'">Quitar</button>
+                    <button class="votar" (click)="votar(i, j)" *ngIf="!verifyVoto(i, j) && !verifyVotoTablero(i) && rol != 'Decisor'">Votar</button>
                     <button class="votar-maximo" (click)="votarMaximo(i, j)" *ngIf="!verifyVotoMaximo(i, j) && !verifyVotoTablero(i) && rol == 'Decisor'">Voto +</button>
-                    <button class="quitar-maximo" (click)="quitarMaximo(i, j)" *ngIf="verifyVotoMaximo(i, j) && rol == 'Decisor'">Quitar</button>-->
+                    <button class="quitar-maximo" (click)="quitarMaximo(i, j)" *ngIf="verifyVotoMaximo(i, j) && rol == 'Decisor'">Quitar</button>
                   </div>
                 </div>
               </div>
